--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Eternal Life Ministry is a Christian website offering a Bible reader, video sermons, picture library, and an interactive New Testament study course." />
     <meta name="google-site-verification" content="Nk3zCk7oJQbsK5Q76a6Pw5Qs8iWMBYqHM0CuochiO5M" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eternal Website</title>
+    <title>Eternal Life Ministry Online Website</title>
   </head>
   <body>
     <div id="root"></div>
